fix: 解决计算分数的问题
