# docs/swagger.json
@@ -3549,6 +3549,88 @@
                 }
             }
         },
+        "/record/listening/submit": {
+            "post": {
+                "description": "提交听力做题记录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Listening"
+                ],
+                "summary": "提交听力做题记录",
+                "parameters": [
+                    {
+                        "description": "听力做题记录内容",
+                        "name": "part",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ListeningRecordsItem"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.ResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.ResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.ResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/record/listening/update": {
             "put": {
                 "description": "更新听力做题记录",
@@ -5184,6 +5266,9 @@
                 },
                 "type": {
                     "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
@@ -5214,6 +5299,9 @@
                 "type": {
                     "type": "integer"
                 },
+                "user_id": {
+                    "type": "string"
+                },
                 "writing_ids": {
                     "type": "array",
                     "items": {
@@ -5242,6 +5330,18 @@
                 },
                 "type": {
                     "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ListeningAnswerItem": {
+            "type": "object",
+            "properties": {
+                "answer": {},
+                "no": {
+                    "type": "string"
                 }
             }
         },
@@ -5345,7 +5445,9 @@
             "properties": {
                 "answers": {
                     "type": "array",
-                    "items": {}
+                    "items": {
+                        "$ref": "#/definitions/models.ListeningAnswerItem"
+                    }
                 },
                 "id": {
                     "type": "integer"
@@ -5361,6 +5463,9 @@
                 },
                 "status": {
                     "type": "string"
+                },
+                "test_id": {
+                    "type": "integer"
                 },
                 "type": {
                     "type": "string"
